<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/cv_user_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/iv_user_enlarged"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_android_black_24dp"
                app:layout_constraintBottom_toTopOf="@id/sv_biography"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_user_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/username_detail"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/iv_user_enlarged"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_email_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/iv_user_enlarged"
                app:layout_constraintTop_toBottomOf="@id/tv_user_name_detail" />

            <TextView
                android:id="@+id/tv_location_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/location"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/iv_user_enlarged"
                app:layout_constraintTop_toBottomOf="@id/tv_email_detail" />

            <TextView
                android:id="@+id/tv_join_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/join_date"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/iv_user_enlarged"
                app:layout_constraintTop_toBottomOf="@id/tv_location_detail" />

            <TextView
                android:id="@+id/tv_followers_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/followers"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/iv_user_enlarged"
                app:layout_constraintTop_toBottomOf="@id/tv_join_date_detail" />

            <TextView
                android:id="@+id/tv_following_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/following"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/iv_user_enlarged"
                app:layout_constraintTop_toBottomOf="@id/tv_followers_detail" />

            <ScrollView
                android:id="@+id/sv_biography"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_following_detail">

                <TextView
                    android:id="@+id/tv_biography_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/biography_stub"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </ScrollView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_for_repo"
                android:background="@android:color/white"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/sv_biography" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cv_user_detail"
        android:id="@+id/rv_repo_selection"
        android:background="@android:color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>